--- a/index.html
+++ b/index.html
@@ -2,51 +2,55 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="./style.css">
 
 </head>
 
 <body>
 
-    <!-- Menu including questions-->
-    <!-- Div left-->
-
-    <div class="left" >
-        <ul class="effects-list" >
-            <li><a href="#a"> What is HTML?</a> </li>
-            <li><a href="#b">What is a basic structure of an HTML document?</a> </li>
-            <li><a href="#c">What are the tags/elements that you've learned so far?</a></li>
-            <li><a href="#d">How are they written?</a></li>
-            <li><a href="#e">What are their important attributes?</a></li>
-            <li><a href="#f">How can they be used</a></li>
-        </ul>
+  <!-- Menu including questions-->
+  <!-- Div left-->
+  <div class="mother">
+    <div class="left">
+      <ul>
+        <li><a href="#a"> What is HTML?</a> </li>
+        <li><a href="#b">What is a basic structure of an HTML document?</a> </li>
+        <li><a href="#c">What are the tags/elements that you've learned so far?</a></li>
+        <li><a href="#d">How are they written?</a></li>
+        <li><a href="#e">What are their important attributes?</a></li>
+        <li><a href="#f">How can they be used</a></li>
+      </ul>
 
     </div>
     <!--Answers -->
     <!--Div right-->
 
     <div class="right">
-        <p class="a">HTML is a markup language and also forms the backbone of all sites in the world. <br>
-            HTML has no appearance and is styled by CSS.</p>
-        <p id="b">The basic structure of an HTML document is as follows : &lt;!DOCTYPE html>&lt;html>&lt;head>&lt;title>&lt;/title>&lt;/head>&lt;body>
-            &lt;/body>
+      <p class="a">HTML is a markup language and also forms the backbone of all sites in the world. <br>
+        HTML has no appearance and is styled by CSS.</p>
+      <p id="b">The basic structure of an HTML document is as follows : &lt;!DOCTYPE html>&lt;html>&lt;head>&lt;title>&lt;/title>&lt;/head>&lt;body>
+        &lt;/body>
         &lt;/html> </p>
-        <p id="c">Tags are the beginning and end parts of an element in HTML. And they start with <code> <> </code>.
-            Elements store content between tags. And they generally consist of a start and end tag and the content that is between them.
-        
-        </p>
-        <p id="d">Technically, an HTML element is the collection of start tag, its attributes, an end tag and everything in between. 
-            On the other hand an HTML tag (either opening or closing) is used to mark the start or end of an element.</p>
-        <p id="e">href, link, width, height, color, background, font-size...</p>
-        <p id="f">We use them inside the tags or put in links or files.</p>
+      <p id="c">Tags are the beginning and end parts of an element in HTML. And they start with <code>
+          <>
+        </code>.
+        Elements store content between tags. And they generally consist of a start and end tag and the content that is between them.
+
+      </p>
+      <p id="d">Technically, an HTML element is the collection of start tag, its attributes, an end tag and everything in between.
+        On the other hand an HTML tag (either opening or closing) is used to mark the start or end of an element.</p>
+      <p id="e">href, link, width, height, color, background, font-size...</p>
+      <p id="f">We use them inside the tags or put in links or files.</p>
 
 
     </div>
 
+
+  </div>
 
 
 </body>
